Copy config.py in docker container

--- a/scraper_twitter/Dockerfile
+++ b/scraper_twitter/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 
 RUN pip install tweepy nameko
 
+COPY config.py .
 COPY scraper_twitter.py .
 
 CMD ["python", "-u", "scraper_twitter.py"]
